Thu Aug 21 14:11:31 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: Reduce redundancy in the compiled file, killing about
	  27k from the compiled file and improving startup time by a few
	  mili (or micro) seconds.

	* src/calc.c: fix decompilation of extra_dict functions (fortunately,
	  no such functions are used in the default library, their use in
	  compiled files is untested, it is hard to see how they would
	  ever end up in a reasonable way in a compiled file anyway)

Wed Aug 20 18:56:35 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix typo

Wed Aug 20 18:49:35 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: also encode the description when compiling.  This is
	  to be on the safe side, I don't think any descriptions right now
	  contain invalid characters for the compiled file such as a
	  semicolon, but they could.

Tue Aug 19 14:09:44 2014  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/prime.gel: update the known limits on mersenne
	  primes from GIMPS

Mon Aug 18 17:10:59 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: improve docs, mark when things were added,
	  document the new float:float:float behaviour, and document all
	  the new stuff added below

	* src/funclib.c, src/eval.[ch]: Add SetElement and SetVElement
	  functions to set specific elements in a global matrix/vector

	* src/geniustests.txt: test SetElement and SetVElement

Sun Aug 17 14:39:15 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, src/gnome-genius.[ch]: When errors are given during
	  graphing, instead of forcing them into a box, which is in
	  retrospect really annoying, just display a warning label below the
	  graph window telling the user to look at the console.  Also
	  if errors do go into a dialog, make sure that it is parented by the
	  graph window

Fri Aug 15 17:38:41 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: update the feedback info to be more within 